--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
         </div>
       </div>
       <div id="plan-container" class="container">
-        <h2>Our Plan to Boost Your Sales and Help You Dominate the Market</h2>
+        <h2>Our Plan to Boost Your Sales 👇</h2>
         <div id="plan-div" class="grid grid-three--cols">
           <div class="plan-item">
             <img src="images/planning.webp" alt="website development planning">
