--- a/index.html
+++ b/index.html
@@ -417,13 +417,9 @@ Unlike most agencies, we handle the <span>hard work of content creation</span> f
       </div>
       <div id="about-us" class="container">
         <div id="about-us--2" class="container">
-          <h3><span>Now, you might be thinking...</span></h3>
-          <h1 class="section-common--heading">
-            WHO IS THIS GUY?!😅
-          </h1>
-          <h3>
+          <h2>
             Hi!👋 I'm <span>Hassaan Rumi</span>, The founder of RumiDevelops.
-          </h3>
+          </h2>
 
           <h3>
             So, in early 2023, I started selling my services online. But got
@@ -449,16 +445,9 @@ Unlike most agencies, we handle the <span>hard work of content creation</span> f
             Join us in our mission to help small Pakistani businesses like
             yours, sell more!🤝
           </h2>
-          <div id="call-to--actions">
-            <div id="contactBtn">
+            <div id="pricingBtn">
               <a href="about.html"><button>Discover more...</button></a>
             </div>
-            <div id="contactBtn">
-              <a target="_blank" href="https://www.instagram.com/rumidevelops.pk/"
-                ><button>Follow me</button></a
-              >
-            </div>
-          </div>
         </div>
         <div id="about-us--1" class="container">
           <img
@@ -470,7 +459,7 @@ Unlike most agencies, we handle the <span>hard work of content creation</span> f
         </div>
       </div>
       <div id="faq" class="container">
-        <h1>Frequently Asked Questions ( FAQ'S ):</h1>
+        <h1>Frequently Asked Questions</h1>
 
         <div class="faq-container">
           <div class="faq-item">
