--- a/about.html
+++ b/about.html
@@ -168,86 +168,95 @@
       </div>
       <div id="plan-container" class="container">
         <h2>Our Plan to Boost Your Sales 👇</h2>
-        <div id="plan-div" class="grid grid-three--cols">
+        <div id="plan-div">
           <div class="plan-item">
-            <img src="images/planning.webp" alt="website development planning">
-            <h1>1.</h1>
-            <h2>
-              You get a tailored plan which will leads you to more sales. 🚀
-            </h2>
-            <p>
-              Ready to transform your business? Start with a call where we dive
-              deep into understanding your needs. We’ll ask the right questions
-              to tailor a plan that fits you perfectly.
-            </p>
-            <br />
-            <p>
-              ✅<strong>Tailored Strategy:</strong> Get a customized website plan
-              and quote, no guesswork involved.
-            </p>
-            <br />
-            <p>
-              ✅<strong>Expert Guidance:</strong> We don’t just build websites; we
-              guide you on how to market your business efficiently.
-            </p>
-            <br />
-            <p>
-              ✅<strong>Shine Bright:</strong> Let’s make your brand shine and
-              stand out in the crowded market!
-            </p>
-          </div>
+            <div class="plan-item--1">
+              <h2>
+                1) You get a tailored plan which will lead you to more sales.
+                </h2>
+              <p>
+                Ready to transform your business? Start with <a href="strategy-session.html">a call</a> where we dive
+                deep into understanding your needs. We’ll ask the right questions
+                to tailor a plan that fits you perfectly.
+              </p>
+              <br />
+              <p>
+                ✅<strong>Tailored Strategy:</strong> Get a customized website plan
+                and quote, no guesswork involved.
+              </p>
+              <br />
+              <p>
+                ✅<strong>Expert Guidance:</strong> We don’t just build websites; we
+                guide you on how to market your business efficiently.
+              </p>
+              <br />
+              <p>
+                ✅<strong>Shine Bright:</strong> Let’s make your brand shine and
+                stand out in the crowded market!
+              </p>
+            </div>
+            <div class="plan-item--2">
+              <img src="images/business.png" alt="website development planning">
+            </div>
+           </div>
           <div class="plan-item">
-            <img src="images/buyer-persona.webp" alt="website development buyer persona">
-            <h1>2.</h1>
-            <h2>
-              You get your entire site written which will include proven sales
-              techniques, so you get more sales. 🎯
-            </h2>
-            <p>
-              Words matter. We gather all the crucial details about your
-              business and craft messages that resonate with your ideal
-              customers.
-            </p>
-            <br />
-            <p>
-              ✅<strong>StoryBrand Framework:</strong> Transform your small
-              business into a well-recognized brand.
-            </p>
-            <br />
-            <p>
-              ✅<strong>Resonating Messages:</strong> Our approach ensures your
-              message converts visitors into loyal customers.
-            </p>
-            <br />
-            <p>
-              ✅<strong>Impactful Communication:</strong> The right words can make
-              all the difference, driving sales and building trust.
-            </p>
-          </div>
+            <div class="plan-item--1">
+              <h2>
+                2) You get your entire site written which will include proven sales
+                 techniques, so you get more sales. 🎯
+               </h2>
+               <p>
+                 Words matter. We gather all the crucial details about your
+                 business and craft messages that resonate with your ideal
+                 customers.
+               </p>
+               <br />
+               <p>
+                 ✅<strong>StoryBrand Framework:</strong> Transform your small
+                 business into a well-recognized brand.
+               </p>
+               <br />
+               <p>
+                 ✅<strong>Resonating Messages:</strong> Our approach ensures your
+                 message converts visitors into loyal customers.
+               </p>
+               <br />
+               <p>
+                 ✅<strong>Impactful Communication:</strong> The right words can make
+                 all the difference, driving sales and building trust.
+               </p>
+            </div>
+            <div class="plan-item--2">
+              <img src="images/buyer-persona.png" alt="website development buyer persona">
+            </div>
+            </div>
           <div class="plan-item">
-            <img src="images/web.webp" alt="website development & design">
-            <h1>3.</h1>
-            <h2>We design & develop it beautifully</h2>
-            <p>
-              ✅<strong>Design You’ll Love:</strong> We create a beautiful design
-              that captures your brand’s essence.
-            </p>
-            <br />
-            <p>
-              ✅<strong>Flawless Development:</strong> We rigorously test
-              everything to ensure your site works perfectly.
-            </p>
-            <br />
-            <p>
-              ✅<strong>SEO Optimization:</strong> Your site is optimized with
-              top-notch SEO to attract and retain customers.
-            </p>
-            <br />
-            <p>
-              ✅<strong>Hosting Done Right:</strong> We host your website,
-              ensuring it’s live, fast, and ready to impress your audience.
-            </p>
-          </div>
+            <div class="plan-item--1">
+              <h2>3) We design & develop it beautifully, making sure that it looks great on all devices.</h2>
+              <p>
+                ✅<strong>Design You’ll Love:</strong> We create a beautiful design
+                that captures your brand’s essence.
+              </p>
+              <br />
+              <p>
+                ✅<strong>Flawless Development:</strong> We rigorously test
+                everything to ensure your site works perfectly.
+              </p>
+              <br />
+              <p>
+                ✅<strong>SEO Optimization:</strong> Your site is optimized with
+                top-notch SEO to attract and retain customers.
+              </p>
+              <br />
+              <p>
+                ✅<strong>Hosting Done Right:</strong> We host your website,
+                ensuring it’s live, fast, and ready to impress your audience.
+              </p>
+            </div>
+           <div class="plan-item--2">
+            <img src="images/programming.png" alt="website development & design">
+           </div>
+            </div>
         </div>
         <div id="cta-div">
           <div id="contactBtn">
