--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
       <div id="about-page" class="container">
         <div id="about-intro">
           <div id="about-intro--1">
-            <h1>Hi!👋 I'm Hassaan Rumi, the founder of Rumidevelops.</h1>
+            <h1>Hi!👋 I'm <span>Hassaan Rumi</span>, the founder of Rumidevelops.</h1>
             <h3>
               In early 2023, I ventured into selling my services online but
               faced challenges with <span>low sales and few clients.</span> I quickly
