--- a/about.html
+++ b/about.html
@@ -74,10 +74,10 @@
                 d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
               /></svg
           ></label>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="pricing.html">Pricing </a></li>
-          <li><a href="works.html">Our Work</a></li>
+          <li><a class="tab" href="index.html">Home</a></li>
+          <li><a class="tab active" href="about.html">About</a></li>
+          <li><a class="tab" href="pricing.html">Pricing </a></li>
+          <li><a class="tab" href="works.html">Our Work</a></li>
         </ul>
       </div>
       <div id="nav-part--3">
