--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
           <li><a class="tab" href="index.html">Home</a></li>
           <li><a class="tab" href="about.html">About</a></li>
           <li><a class="tab" href="pricing.html">Pricing </a></li>
-          <li><a class="tab active" href="works.html">Our Work</a></li>
+          <li><a class="tab active" href="portfolio.html">Portfolio</a></li>
         </ul>
       </div>
       <div id="nav-part--3">
