--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
           <h1>Discover Your Path to Online Success</h1>
           <h4>
             Ever felt like your business deserves more attention? <br />
-            At Rumidevelops, we simplify growing your business online <span>so you can
+            At Rumidevelops, I simplify growing your business online <span>so you can
             focus on what you do best.</span> <br /><br />
             Our mission is to help <span>small Pakistani businesses</span> market their
             products and services with clear, compelling messages and effective
@@ -122,10 +122,10 @@
           </h4>
         </div>
         <div id="about-work">
-          <h1>To make that mission possible we</h1>
+          <h1>To make that mission possible I</h1>
           <h4>
             offer a unique <span>"words first"</span> approach. <br />
-            Unlike other agencies, we start by discussing your business in
+            Unlike other agencies, I start by discussing your business in
             detail and then create the best content for your site. <br />
             This ensures your website not only looks great but also converts
             visitors into customers.
@@ -140,7 +140,7 @@
             <a href="pricing.html">30-day 100% money-back guarantee</a>.
             <br /><br />
             If you don't get the results that you were promised, you will get
-            your money back and you get to keep the website also OR we can work
+            your money back and you get to keep the website also OR I can work
             again on the site to make sure it gets more sales. <br /><br />
             Join us, and let’s turn your business into a thriving online
             presence. <br /><br />
@@ -175,7 +175,7 @@
                 1) You get a tailored plan which will lead you to more sales.
                 </h2>
               <p>
-                Ready to transform your business? Start with <a href="strategy-session.html">a call</a> where we dive
+                Ready to transform your business? Start with <a href="strategy-session.html">a call</a> where I dive
                 deep into understanding your needs. We’ll ask the right questions
                 to tailor a plan that fits you perfectly.
               </p>
@@ -186,7 +186,7 @@
               </p>
               <br />
               <p>
-                ✅<strong>Expert Guidance:</strong> We don’t just build websites; we
+                ✅<strong>Expert Guidance:</strong> We don’t just build websites; I
                 guide you on how to market your business efficiently.
               </p>
               <br />
