--- a/index.html
+++ b/index.html
@@ -134,107 +134,69 @@
         <div id="problems-div">
           <div id="problems-part--1">
             <p>
-              Let me guess, you're looking for new ways to get more customers
-              and beat your competition.
+              You’re likely seeking effective strategies to attract more customers and outperform your competitors.
             </p>
             <br />
             <p>
-              And you might be thinking, "If I had more visitors to my site, I'd
-              get more customers."
+              It’s common to believe that “more website visitors will automatically mean more customers.” However, the reality is different.
             </p>
             <p>
-              But here's the truth, most people don't have a traffic problem.
+               Most businesses don’t face a traffic problem. They face a <span class="danger">conversion problem.</span>
             </p>
             <br />
             <p>the real deal is...</p>
             <br />
-            <p>They have a <span>"conversion problem"</span>.</p>
-            <p>You see, there is no shortage of traffic online.</p>
+            <p>There is no shortage of online traffic. With over 1.8 billion active users on Facebook alone, traffic is readily available and even purchasable. The true challenge lies in what happens after those visitors arrive on your site.</p>
+            <br />
+            <p>The key question is: How effectively are those visitors being converted into leads, sales, and long-term customers?</p>
+            <br />
+            <p>Here’s the solution:</p>
+            <br />
             <p>
-              There are literally 1.8 billion active users on facebook alone.
+              Imagine a high-performing salesperson who operates 24/7, never takes breaks, never asks for a raise, and consistently transforms visitors into loyal customers. That salesperson is a high-converting brand website.
             </p>
-            <p>And you can buy as much traffic as you want.</p>
-            <br />
-            <p>So, "what's the problem?"</p>
-            <p>ok let's go.</p>
-            <p>here's the problem:</p>
-            <br />
+            <br/>
             <p>
-              The real issue is how well you
-              <span class="daanger">turn</span> those visitors into leads,
-              sales, or loyal customers.
-            </p>
-            <br />
-            <p>But every problem has a solution.</p>
-            <p>Here's yours:</p>
-            <br />
-            <p>
-              Imagine having a <span>superstar salesperson</span> who works
-              24/7, converting visitors into customers.
+              A strategically designed website not only presents your brand in the best light, but also works tirelessly in the background—day and night—to drive sales and build customer relationships.
             </p>
             <br />
             <p>
-              This champion costs less and works better than any other marketing
-              strategy.
+              The investment is made once, but the returns continue indefinitely. Your website becomes the most reliable and cost-effective “employee” in your business, generating results consistently without ongoing expense.
             </p>
             <br />
             <p>
-              And... this champion is known as: <span>"High Converting Brand Website!"</span>
-            </p>
-            <p>
-              All you need is a <span>High Converting Brand Website</span> that looks great and
-              turns <span>visitors into buyers!</span>
+              This is the competitive advantage your business needs. If you’re ready to let your website do the hard work, now is the time to take action.
             </p>
             <br />
             <p>
-              Picture this: Your Brand Website, working day and night, turning
-              visitors into paying customers <span>while you sleep😴.</span>
-            </p>
-            <br />
-            <p>
-              The best part? You only pay for this superstar once! Then, it
-              keeps bringing in sales day and night📈, without any extra cost!
+              And with that, allow me to present an offer that is truly <span class="danger">difficult to refuse…</span>
             </p>
             <br /><br />
-            <p>
-              It's like having an employee who never takes a break and never
-              asks for a raise. Interested? You should be! This is the
-              <span>secret weapon</span> your business needs. Ready to let your
-              website do the hard work? Let’s make it happen!
-            </p>
-            <br /><br />
-            <p>
-              And now, I will give you an offer that you
-              <span class="danger">"can't refuse!"</span>
-            </p>
-            <p>here it is...</p>
-            <br /><br />
-            <h3>UNBELIEVABLE OFFER: "SKYROCKET YOUR SALES OR PAY NOTHING!"</h3>
+            <h3>Exclusive Offer: “Skyrocket Your Sales — or You Pay Nothing”</h3>
             <h3>
-              "Transform Your Website Visitors into Loyal Customers -
-              Guaranteed, or It's FREE!"
+              We are committed to delivering measurable results for your business.
             </h3>
-            <p>Excited to see what's in the offer?</p>
-            <p>go <a href="pricing.html">here! ,and see by yourself.</a></p>
+            <h3>Our guarantee is simple: if your website does not achieve significant improvement in converting visitors into loyal customers, you will not be charged.</h3>
+            <br/><p>This ensures that your investment is entirely risk-free and fully performance-based.</p>
+            <br/><p>If you are ready to explore the details of this offer, we invite you to <a href="pricing.html">review them here and see for yourself.</a></p>
             <br /><br />
+            <p>If you read this far that means that you are really serious about this, that's why I am gonna give you a favor from my side...</p>
+            <br>
+            <h3>Complimentary Strategy Session!</h3>
             <p>
-              Now if you want us to personally guide you (for totally free!)
-              through the process of getting more sales and "how to market",
-              then just click on the button below to claim your free 30-minute
-              strategy session with our team to get a complete analysis of your
-              business and a roadmap that you can implement the moment you
-              recieve it to boost your sales and outstand everyone in the
-              market.
-              <br /><br />
-              We will also help you create your <span>brand offer</span> that
-              only a "dumb person" would refuse! <br /><br />
-              Normally, salesman charge tens of thousands of rupees just for
-              this knowledge that we are giving out for free. Because we know how
-              it feels when you get beaten by your competition and struggle to
-              get sales. <br />
-              <br />
-              <span class="danger">Hurry up!</span> as we already have so many
-              customers and only two sessions per day ⏳.
+              We are offering you the opportunity to receive a <span>free 30-minute strategy session</span> with our team. In this session, you will gain:
+              </p><br>
+              
+                <p>1. A complete analysis of your business.</p>
+                <p>2. A customized roadmap you can implement immediately to increase sales.</p>
+                <p>3. Expert guidance on how to market your brand effectively and stand out from competitors.</p>
+                <p>4. In addition, we will help you refine and craft a brand offer so compelling that it becomes difficult for your audience to ignore.</p>
+              
+              <br>
+              <p>
+              Ordinarily, professionals charge tens of thousands of rupees for insights of this nature.
+              <br>However, we are providing this at no cost because we understand the challenges of competing in today’s market and the frustration of struggling to secure consistent sales.
+              <br><br><span class="danger">⚠️ Availability is limited</span> due to high demand, we can only accommodate two sessions per day. Secure your spot now before the schedule fills up.
             </p>
           </div>
           <div id="problems-part--2">
@@ -262,7 +224,7 @@
         </div>
         <div id="sales-growth--2" class="container">
           <h2 class="sales-growth--heading">
-            Imagine a <span>high-converting website</span> doing all the heavy lifting while you kick back and sip your chai! No more chasing down every DM or answering the same question 50 times. We’re here to make your website do the work, so you can focus on what really matters—like growing your business and maybe a little more chai. 😄
+          Imagine having a <span>high-converting website</span> that takes care of the hard work for you—while you relax and enjoy your chai. No more spending hours chasing every message or repeating the same answers countless times. With the right strategy, your website can handle these tasks seamlessly, allowing you to focus on what truly matters: growing your business (and perhaps enjoying that extra cup of chai). ☕  
           </h2>
           <div id="sales-growth--div">
             <div class="sales-growth--item">
