--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <br/><p>This ensures that your investment is entirely risk-free and fully performance-based.</p>
             <br/><p>If you are ready to explore the details of this offer, we invite you to <a href="pricing.html">review them here and see for yourself.</a></p>
             <br /><br />
-            <p>If you read this far that means that you are really serious about this, that's why I am gonna give you a favor from my side...</p>
+            <p>If you have read this far, it indicates that you are genuinely committed; therefore, we would like to extend a favor to you.</p>
             <br>
             <h3>Complimentary Strategy Session!</h3>
             <p>
