--- a/index.html
+++ b/index.html
@@ -146,18 +146,18 @@
             <br />
             <p>the real deal is...</p>
             <br />
-            <p>There is no shortage of online traffic. With over 1.8 billion active users on Facebook alone, traffic is readily available and even purchasable. The true challenge lies in what happens after those visitors arrive on your site.</p>
+            <p>There is no shortage of online traffic. With over <span>1.8 billion active users</span> on Facebook alone, traffic is readily available and even purchasable. The true challenge lies in what happens after those visitors arrive on your site.</p>
             <br />
-            <p>The key question is: How effectively are those visitors being converted into leads, sales, and long-term customers?</p>
+            <p>The key question is: <br><span>How effectively are those visitors being converted into leads, sales, and long-term customers?</span></p>
             <br />
-            <p>Here’s the solution:</p>
+            <p><span>Here’s the solution:</span></p>
             <br />
             <p>
-              Imagine a high-performing salesperson who operates 24/7, never takes breaks, never asks for a raise, and consistently transforms visitors into loyal customers. That salesperson is a high-converting brand website.
+              Imagine a <span>high-performing salesperson</span> who operates 24/7, never takes breaks, never asks for a raise, and consistently transforms visitors into loyal customers. <br>That salesperson is a <span>high-converting brand website.</span>
             </p>
             <br/>
             <p>
-              A strategically designed website not only presents your brand in the best light, but also works tirelessly in the background—day and night—to drive sales and build customer relationships.
+              A strategically designed website not only presents your brand in the best light, but also works tirelessly in the background—day and night—to <span>drive sales and build customer relationships.</span>
             </p>
             <br />
             <p>
@@ -165,7 +165,7 @@
             </p>
             <br />
             <p>
-              This is the competitive advantage your business needs. If you’re ready to let your website do the hard work, now is the time to take action.
+              This is the competitive advantage your business needs. If you’re ready to let your website do the hard work, <span>now is the time to take action.</span>
             </p>
             <br />
             <p>
